--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.header {grid-area: header;}
+.leftside{grid-area: leftside;}
+.rightside{grid-area: rightside;}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App{
+    display: grid;
+    grid-template-columns: 250px 1fr 1fr;
+    grid-template-areas: 'header header header' 'leftside rightside rightside';
+    font-family: 'Poppins';
+    /* position: relative; */
+    /* max-height: 100vh; */
 }
