--- a/src/components/popups/BordForm/BoardForm.css
+++ b/src/components/popups/BordForm/BoardForm.css
@@ -12,8 +12,8 @@
     border: 1px solid black;
     border-radius: 15px;
     padding:20px 25px;
-    min-width: 350px;
-    max-width: 350px;
+    min-width: 400px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -82,3 +82,7 @@
     background-color: lightskyblue;
 }
 
+.withTasks{
+    color: lightcoral;
+    pointer-events:none ;
+}
