dark and light drag and drop func

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
+
+
 .header {grid-area: header;}
 .leftside{grid-area: leftside;}
 .rightside{grid-area: rightside;}
+
+
 
 .App{
     display: grid;
@@ -11,4 +15,8 @@
     font-family: 'Poppins';
     /* position: relative; */
     /* max-height: 100vh; */
+}
+
+.App-hidden{
+    grid-template-areas: 'header header header' 'leftside rightside rightside';
 }
