--- a/src/components/Header/logo/logo.css
+++ b/src/components/Header/logo/logo.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap');
 .logo{
     min-width: 250px;
-    border-right: 1px dashed black;
+    /* border-right: 3px dashed black; */
     text-align: center;
     font-family: 'Source Sans Pro';
-    color: black;
+    color: var(--light-color);
     font-weight: bold;
     font-size: 50px;
     padding: 5px 0 5px 0 ;
     letter-spacing: 1.5px;
+    background-color: var(--leftside-color);
 }
