--- a/src/components/Leftside/Leftside.css
+++ b/src/components/Leftside/Leftside.css
@@ -1,29 +1,67 @@
 .boards{
-    margin-top: 2px;
+    margin: 5px 10px ;
     letter-spacing: 0.1rem;
+    color: var(--light-color);
 }
 
 .leftside{
+    position: sticky;
     min-width: 250px ;
-    max-height: 600px ;
-    border-right: 1px dashed black ;
+    max-height: calc(100vh - 79px) ;
+    /* border-right: 3px dashed black ;  */
     /* border-bottom: 1px solid red; */
+    background-color: var(--leftside-color);
 }
 
 .addboard{
-    border: none;
+    /* border: none;
     background-color: transparent;
     font-size: 18px ;
-    font-weight: 500 ;
+    font-weight: bold ;
     padding: 3px 0 ;
     text-align: start ;
     border-radius: 0 25px 25px 0 ;
     cursor: pointer ;
-    margin-top: 5px ;
+    margin-top: 6px ;
     margin-left: 10px ;
+    letter-spacing: 0.1rem;
+    color: var(--primary-text-color) ; */
+    background-color: var(--main-color);
+    font-size: 17px ;
+    padding: 10px 22px;
+    border-radius: 25px;
+    border: none;
+    font-weight: 400;
+    color: var(--dark-color);
+    /* margin-top: ; */
+    margin-bottom: 10px;
+    margin-left: 10px;
+    /* margin-right: 5px; */
+    cursor: pointer;
+    letter-spacing: 0.1rem;
+    border-radius: 0 25px 25px 0 ;
 }
 
 .addboard:hover{
-    color: darkolivegreen;
-    opacity: 0.9;
+    color: var(--primary-text-color) ;
+    opacity: 0.5;
 }
+
+
+
+.hide-left-side {
+    /* border: 1px solid black; */
+    width: 200px;
+    margin: auto;
+    margin-top: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: var(--light-color);
+    font-size:16px ;
+    letter-spacing: 0.1rem;
+    cursor: pointer;
+}
+
+
