--- a/src/components/popups/ShowWarning/ShowWarning.css
+++ b/src/components/popups/ShowWarning/ShowWarning.css
@@ -1,3 +1,14 @@
+.effects{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:var(--effect-popup-color) ;
+}
+
 .warning{
     border: 1px solid black;
     border-radius: 15px;
@@ -10,19 +21,22 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    background-color: var(--background-color);
+    box-shadow: 0px 0px 15px 1px var(--dark-color);
 }
 
+
 .warning h3{
-    color:lightcoral ;
+    color:var(--primary-text-color) ;
 }
 
 .warning p {
     font-size: 14px;
 }
 .Board-title{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
-    color:rgb(51, 110, 129) ;
+    color:var(--selected-color) ;
     letter-spacing: 0.5px;
 }
 .buttons{
@@ -40,11 +54,13 @@
 }
 
 .Cancel{
-    color: white;
-    background-color: lightgrey;
+    color: var(--primary-color);
+    background-color: var(--secondry-button) ;
+    font-weight: bold;
 }
 
 .Delete{
     color: white;
-    background-color: lightcoral;
+    background-color: var(--danger-button);
+    font-weight: bold;
 }
