--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
     --light-color:white ;
     --background-color:#eee ;
     --header-color :#eee ;
+    --header-menu-color: rgb(207, 206, 206) ;
     --leftside-color:#04685e ;
     --tasks-color:#d3e0d7 ;
     --primary-button:#04685e;
