--- a/src/components/popups/BordForm/BoardForm.css
+++ b/src/components/popups/BordForm/BoardForm.css
@@ -52,6 +52,7 @@
     border-radius: 10px;
     background-color: var(--background-color);
     letter-spacing: .1rem;
+    color: var(--primary-text-color);
 }
 
 .group input:focus{
