--- a/src/components/popups/TaskForm/TaskForm.css
+++ b/src/components/popups/TaskForm/TaskForm.css
@@ -198,6 +198,13 @@
     letter-spacing: 1px;
     background-color: var(--background-color);
     color: var(--primary-text-color);
+    cursor: pointer;
+}
+
+.column-dropdown > option{
+    font-size: 16px;
+    height: 50px;
+    padding: 15px;
 }
 
 .viewmode{
