--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,131 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
 
-.header{
-    /* border-bottom: 3px solid var(--border-color); */
-    min-width: 100%;
-    height: 75px;
-    display: flex;
-    background-color: var(--background-color);
+.header {
+  border-bottom: 3px dashed var(--dark-color);
+  min-width: 100%;
+  height: 75px;
+  display: flex;
+  background-color: var(--background-color);
 }
 
-.header-menu{
-    font-family: "Poppins" ;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
-    background-color: var(--header-menu-color);
+.header-menu {
+  font-family: "Poppins";
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+  background-color: var(--header-menu-color);
 }
 
-.board-title{
-    font-size: 30px ;
-    font-weight: bold;
-    color:var(--primary-text-color) ;
+.board-title {
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--primary-text-color);
 }
 
-.button-add-task{
-    background-color: var(--primary-button);
-    font-size: 17px ;
-    padding: 10px 18px;
-    border-radius: 25px;
-    border: none;
-    font-weight: 400;
-    color: var(--secondry-text-color);
-    margin-left: auto;
-    cursor: pointer;
-    letter-spacing: 0.1rem;
+.button-add-task {
+  background-color: var(--primary-button);
+  font-size: 17px;
+  padding: 10px 18px;
+  border-radius: 25px;
+  border: none;
+  font-weight: 400;
+  color: var(--secondry-text-color);
+  margin-left: auto;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
 }
-.button-add-task:hover{
-    opacity: 0.6 ;
-}
-
-.mysettingIcon{
-    margin: 0 15px ;
-    cursor: pointer;
-    border-radius: 25px ;
-    font-size: 28px;
-    padding: 5px 0;
-    color: var(--primary-button);
-    /* color: var(--primarybutton-color); */
+.button-add-task:hover {
+  opacity: 0.6;
 }
 
-.mysettingIcon:hover{
-    background-color: rgb(212, 230, 236);
+.mysettingIcon {
+  margin: 0 15px;
+  cursor: pointer;
+  border-radius: 25px;
+  font-size: 28px;
+  padding: 5px 0;
+  color: var(--primary-button);
+  /* color: var(--primarybutton-color); */
 }
 
-.effects-setting{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:transparent ;
+.mysettingIcon:hover {
+  background-color: rgb(212, 230, 236);
 }
 
-.effects-setting-ele{
-    position: absolute ;
-    z-index: 9999;
-    top: 4.8rem ;
-    right: 2.5rem ;
-    padding: 15px 20px;
-    display: flex;
-    flex-direction: column;
-    /* border: 1px solid black; */
-    box-shadow: 0 0 10px 1px var(--dark-color);
-    border-radius: 5px;
-    gap: 15px;
-    align-items: flex-start;
-    width: 180px;
-    background-color: var(--background-color);
+.effects-setting {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
 }
 
-.effects-setting-ele button{
-    border: none;
-    cursor: pointer;
-    font-size: 18px;
-    background-color: transparent;
-    letter-spacing: .1rem;
+.effects-setting-ele {
+  position: absolute;
+  z-index: 9999;
+  top: 4.8rem;
+  right: 2.5rem;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+  box-shadow: 0 0 10px 1px var(--dark-color);
+  border-radius: 5px;
+  gap: 15px;
+  align-items: flex-start;
+  width: 180px;
+  background-color: var(--background-color);
 }
 
-.effects-setting-ele button:nth-child(1){
-    color: var(--primary-text-color);
-}
-.effects-setting-ele button:nth-child(1):hover{
-    opacity: 0.6;
-    color: var(--primary-text-color);
-}
-
-.effects-setting-ele button:nth-child(2){
-    color: lightcoral;
+.effects-setting-ele button {
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  background-color: transparent;
+  letter-spacing: 0.1rem;
 }
 
-
-.light-dark{
-    margin-left: 20px;
-    /* border: 1px solid black; */
-    height: 35px;
-    width: 35px;
-    border-radius: 50%;
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
+.effects-setting-ele button:nth-child(1) {
+  color: var(--primary-text-color);
+}
+.effects-setting-ele button:nth-child(1):hover {
+  opacity: 0.6;
+  color: var(--primary-text-color);
 }
 
-.sun , .moon {
-    font-size: 30px;
+.effects-setting-ele button:nth-child(2) {
+  color: lightcoral;
 }
 
-.moon{
-    color: darkslategray;
-    cursor: pointer;
+.light-dark {
+  margin-left: 20px;
+  /* border: 1px solid black; */
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
 }
 
-.sun{
-    color:gold;
-    cursor: pointer;
+.sun,
+.moon {
+  font-size: 30px;
+}
+
+.moon {
+  color: darkslategray;
+  cursor: pointer;
+}
+
+.sun {
+  color: gold;
+  cursor: pointer;
 }
