--- a/src/components/Leftside/boardsList/boardslist.css
+++ b/src/components/Leftside/boardsList/boardslist.css
@@ -1,42 +1,41 @@
-.boardslist{
-    margin-top: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    list-style: none;
-    padding-left: 10px;
-    border-left: 3px solid var(--main-color) ;
-    margin-left: 10px;
-    height: 50vh;
+.boardslist {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  list-style: none;
+  padding-left: 10px;
+  border-left: 3px solid var(--primary-button);
+  margin-left: 10px;
+  height: 50vh;
 }
 
 .board-name {
-    border-left: 3px solid var(--light-color) ;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 7px 5px;
-    border-radius: 0 25px 25px 0;
-    margin-right: 15px;
-    cursor: pointer;
-    display: flex;
-    align-items: flex-start;
-    /* justify-content: center; */
-    column-gap: 5px;
-    color: var(--light-color);
+  border-left: 3px solid var(--primary-text-color);
+  font-size: 18px;
+  font-weight: 500;
+  padding: 7px 5px;
+  border-radius: 0 25px 25px 0;
+  margin-right: 15px;
+  cursor: pointer;
+  display: flex;
+  align-items: flex-start;
+  /* justify-content: center; */
+  column-gap: 5px;
+  color: var(--primary-text-color);
 }
-.board-icon{
-    background-color: transparent;
-    margin-top: 3px;
+.board-icon {
+  background-color: transparent;
+  margin-top: 3px;
 }
 
-.board-name:not(.selected):hover{
-    background-color: var(--selected-color);
-    color: white;
-    opacity: 0.8;
-    
+.board-name:not(.selected):hover {
+  background-color: var(--selected-color);
+  color: var(--primary-text-color);
+  opacity: 0.8;
 }
 
 .selected {
-    background-color: var(--selected-color);
-    color: white;
+  background-color: var(--selected-color);
+  color: var(--primary-text-color);
 }
