--- a/src/components/Rightside/Rightside.css
+++ b/src/components/Rightside/Rightside.css
@@ -1,24 +1,48 @@
-.rightside{
-    /* border-left: 3px dashed black; */
-    padding-left: 10px;
-    /* padding-right:20px ; */
-    overflow: auto;
-    max-height: calc(100vh - 80px);
-    min-height: calc(100vh - 80px);
-    background-color: var(--background-color);
+.rightside {
+  padding-left: 10px;
+  overflow: auto;
+  max-height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
+  background-color: var(--background-color);
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 8px;
-    cursor: pointer;
+  width: 10px;
+  height: 8px;
+  cursor: pointer;
 }
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: gray; 
-    border-radius: 10px;
+  background: gray;
+  border-radius: 10px;
+}
+
+.nothing {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  justify-items: center;
+  margin: auto;
+  margin-top: 30%;
+  color: var(--primary-text-color);
+}
+
+.firstboard {
+  background-color: var(--primary-button);
+  font-size: 17px;
+  padding: 10px 18px;
+  border-radius: 25px;
+  border: none;
+  font-weight: 400;
+  color: var(--secondry-text-color);
+  cursor: pointer;
+  letter-spacing: 0.1rem;
+}
+.firstboard:hover {
+  opacity: 0.6;
 }
