--- a/src/components/popups/ShowWarning/ShowWarning.css
+++ b/src/components/popups/ShowWarning/ShowWarning.css
@@ -1,67 +1,66 @@
-.effects{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:var(--effect-popup-color) ;
+.effects {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--effect-popup-color);
 }
 
-.warning{
-    border: 1px solid black;
-    border-radius: 15px;
-    padding:20px 25px;
-    position: absolute;
-    top: 30%;
-    left: 35%;
-    min-width: 400px;
-    max-width: 400px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    background-color: var(--background-color);
-    box-shadow: 0px 0px 15px 1px var(--dark-color);
+.warning {
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 20px 25px;
+  position: absolute;
+  top: 30%;
+  left: 35%;
+  min-width: 400px;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: var(--background-color);
+  box-shadow: 0px 0px 15px 1px var(--dark-color);
 }
 
-
-.warning h3{
-    color:var(--primary-text-color) ;
+.warning h3 {
+  color: var(--primary-text-color);
 }
 
 .warning p {
-    font-size: 14px;
-    color: var(--primary-text-color);
+  font-size: 14px;
+  color: var(--primary-text-color);
 }
-.Board-title{
-    font-size: 18px;
-    font-weight: bold;
-    color:var(--selected-color) ;
-    letter-spacing: 0.5px;
+.Board-title {
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--main-color);
+  letter-spacing: 0.5px;
 }
-.buttons{
-    display: flex ;
-    justify-content: space-between ;
-    margin-top: 10px;
-}
-
-.buttons button{
-    padding: 10px 60px;
-    font-size: 16px;
-    border-radius: 25px;
-    border: none;
-    cursor: pointer;
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
 }
 
-.Cancel{
-    color: var(--primary-color);
-    background-color: var(--secondry-button) ;
-    font-weight: bold;
+.buttons button {
+  padding: 10px 60px;
+  font-size: 16px;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
 }
 
-.Delete{
-    color: white;
-    background-color: var(--danger-button);
-    font-weight: bold;
+.Cancel {
+  color: var(--primary-color);
+  background-color: var(--secondry-button);
+  font-weight: bold;
+}
+
+.Delete {
+  color: white;
+  background-color: var(--danger-button);
+  font-weight: bold;
 }
